:sparkles: feat: Support specified package path to scanning